--- a/UI/html/userProfile.html
+++ b/UI/html/userProfile.html
@@ -18,20 +18,18 @@
         <a href="./loginPage.html">O-Meal</a>
       </div>
       <div id="large-width-nav">
-        <a href="./homePage.html">Home</a>
-        <a id="active" href="./userProfile.html">Profile</a>
-        <a href="./orderFoodPage.html">Order</a>
+        <a href="./userProfile.html">Profile</a>
+        <a id="active" href="./orderFoodPage.html">Order</a>
         <a href="./aboutPage.html">About</a>
-        <a href="./loginPage.html">Logout</a>
       </div>
       <div id="nav-menu">
+        <a id="logout" href="./loginPage.html">Logout</a>
         <span id="hamburger">
           <i class="fas fa-bars fa-2x"></i>
         </span>
       </div>
     </nav>
     <div id="small-width-nav">
-      <a href="./homePage.html">Home</a>
       <a href="./userProfile.html">Profile</a>
       <a href="./orderFoodPage.html">Order</a>
       <a href="./aboutPage.html">About</a>
@@ -39,119 +37,121 @@
     </div>
   </header>
   <main>
-    <section id="user-details">
-      <div id="user-container">
-        <div id="user-identify">
-          <img src="../images/user.jpeg" alt="user_pic">
-          <div id="user-identify-text">
-            <h2>Jane Doe</h2>
-            <p>Lorem ipsum dolor sit amet.</p>
+    <div id="page-container">
+      <section id="user-details">
+        <div id="user-container">
+          <div id="user-identify">
+            <img src="../images/user.jpeg" alt="user_pic">
+            <div id="user-identify-text">
+              <h2>Jane Doe</h2>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+          <div id="user-actions">
+            <ul id="list-user-actions">
+              <li>Meals ordered <span id="meal-number">7</span></li>
+              <li>view meals ordered</li>
+              <li>edit profile</li>
+              <li>logout</li>
+            </ul>
           </div>
         </div>
-        <div id="user-actions">
-          <ul id="list-user-actions">
-            <li>Meals ordered <span id="meal-number">7</span></li>
-            <li>view meals ordered</li>
-            <li>edit profile</li>
-            <li>logout</li>
-          </ul>
+      </section>
+      <section id="filter-container">
+        <div id="filter-text">
+          <h2>meals ordered</h2>
         </div>
-      </div>
-    </section>
-    <section id="filter-container">
-      <div id="filter-text">
-        <h2>meals ordered</h2>
-      </div>
-      <div id="filter">
-        <div id="filter-input">
-          <input type="text" id="search-by" placeholder="Enter search here">
-          <input type="date" id="filter-by-date" placeholder="Enter date here">
+        <div id="filter">
+          <div id="filter-input">
+            <input type="text" id="search-by" placeholder="Enter search here">
+            <input type="date" id="filter-by-date" placeholder="Enter date here">
+          </div>
+          <div id="filter-by">
+            <select id="filter-by-detail">
+              <option value="Meal">Meal</option>
+              <option value="Meal">Prize</option>
+              <option value="Meal">Destination</option>
+            </select>
+            <span id="search">
+              <i class="fas fa-search fa-2x"></i>
+            </span>
+          </div>
         </div>
-        <div id="filter-by">
-          <select id="filter-by-detail">
-            <option value="Meal">Meal</option>
-            <option value="Meal">Prize</option>
-            <option value="Meal">Destination</option>
-          </select>
-          <span id="search">
-            <i class="fas fa-search fa-2x"></i>
+      </section>
+      <section id="meals-ordered-container">
+        <div id="meals-ordered">
+          <div class="meals">
+            <img src="../images/burger.jpeg" alt="meal">
+            <div class="meal-details">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+          </div>
+          <div class="meals">
+            <img src="../images/pizza.jpeg" alt="meal">
+            <div class="meal-details">
+              <p><span class="meal-property">Meal: </span>Pizza</p>
+              <p><span class="meal-property">Quantity: </span>1 Piece </p>
+              <p><span class="meal-property">Drink: </span>Sprite 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 700</p>
+            </div>
+          </div>
+          <div class="meals">
+            <img src="../images/chicken.jpeg" alt="meal">
+            <div class="meal-details">
+              <p><span class="meal-property">Meal: </span>Barbeque</p>
+              <p><span class="meal-property">Quantity: </span>4 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Five Alive 1 ltr</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 1,300</p>
+            </div>
+          </div>
+          <div class="meals">
+            <img src="../images/chicken-wings.jpeg" alt="meal">
+            <div class="meal-details">
+              <p><span class="meal-property">Meal: </span>Chicke Wings</p>
+              <p><span class="meal-property">Quantity: </span>6 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Hollandia 1 ltr</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 900</p>
+            </div>
+          </div>
+          <div class="meals">
+            <img src="../images/cake.jpeg" alt="meal">
+            <div class="meal-details">
+              <p><span class="meal-property">Meal: </span>cake</p>
+              <p><span class="meal-property">Quantity: </span>1 Piece </p>
+              <p><span class="meal-property">Drink: </span>None</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 2,500</p>
+            </div>
+          </div>
+          <div class="meals">
+            <img src="../images/burger.jpeg" alt="meal">
+            <div class="meal-details">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="paginate-container">
+        <div id="paginate">
+          <span class="page">1</span>
+          <span class="page">2</span>
+          <span class="page">3</span>
+          <span class="page">
+            <i class="fas fa-ellipsis-h"></i>
+          </span>
+          <span class="page">
+            <a href="#filter-text">
+              <i class="fas fa-chevron-up"></i>
+            </a>
           </span>
         </div>
-      </div>
-    </section>
-    <section id="meals-ordered-container">
-      <div id="meals-ordered">
-        <div class="meals">
-          <img src="../images/burger.jpeg" alt="meal">
-          <div class="meal-details">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
-          </div>
-        </div>
-        <div class="meals">
-          <img src="../images/pizza.jpeg" alt="meal">
-          <div class="meal-details">
-            <p><span class="meal-property">Meal: </span>Pizza</p>
-            <p><span class="meal-property">Quantity: </span>1 Piece </p>
-            <p><span class="meal-property">Drink: </span>Sprite 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 700</p>
-          </div>
-        </div>
-        <div class="meals">
-          <img src="../images/chicken.jpeg" alt="meal">
-          <div class="meal-details">
-            <p><span class="meal-property">Meal: </span>Barbeque</p>
-            <p><span class="meal-property">Quantity: </span>4 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Five Alive 1 ltr</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 1,300</p>
-          </div>
-        </div>
-        <div class="meals">
-          <img src="../images/chicken-wings.jpeg" alt="meal">
-          <div class="meal-details">
-            <p><span class="meal-property">Meal: </span>Chicke Wings</p>
-            <p><span class="meal-property">Quantity: </span>6 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Hollandia 1 ltr</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 900</p>
-          </div>
-        </div>
-        <div class="meals">
-          <img src="../images/cake.jpeg" alt="meal">
-          <div class="meal-details">
-            <p><span class="meal-property">Meal: </span>cake</p>
-            <p><span class="meal-property">Quantity: </span>1 Piece </p>
-            <p><span class="meal-property">Drink: </span>None</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 2,500</p>
-          </div>
-        </div>
-        <div class="meals">
-          <img src="../images/burger.jpeg" alt="meal">
-          <div class="meal-details">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="paginate-container">
-      <div id="paginate">
-        <span class="page">1</span>
-        <span class="page">2</span>
-        <span class="page">3</span>
-        <span class="page">
-          <i class="fas fa-ellipsis-h"></i>
-        </span>
-        <span class="page">
-          <a href="#filter-text">
-            <i class="fas fa-chevron-up"></i>
-          </a>
-        </span>
-      </div>
-    </section>
+      </section>
+    </div>
   </main>
   <footer>
     <div id="footer">
